--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "scully": "npx scully --",
     "scully:serve": "npx scully serve --",
-    "static": "ng build --configuration production && npx scully --"
+    "static": "ng build --configuration production && npx scully --",
+    "preinstall": "npx only-allow pnpm"
   },
   "private": true,
   "dependencies": {
@@ -24,8 +25,12 @@
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/platform-server": "^15.0.4",
     "@angular/router": "^15.0.4",
+    "@scullyio/ng-lib": "^2.1.41",
+    "@scullyio/scully": "^2.1.41",
     "github-calendar": "^2.2.9",
+    "marked": "^4.2.12",
     "ngx-markdown": "^13.1.0",
+    "prismjs": "^1.29.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
