--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "marked": "^4.2.12",
     "ngx-markdown": "^13.1.0",
+    "openai": "^3.2.1",
     "prismjs": "^1.29.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
