--- a/package.json
+++ b/package.json
@@ -10,27 +10,33 @@
     "scully": "npx scully --",
     "scully:serve": "npx scully serve --",
     "static": "ng build --configuration production && npx scully --",
-    "preinstall": "npx only-allow pnpm"
+    "preinstall": "npx only-allow pnpm",
+    "dev:ssr": "ng run personal:serve-ssr",
+    "serve:ssr": "node dist/personal/server/main.js",
+    "build:ssr": "ng build && ng run personal:server",
+    "prerender": "ng run personal:prerender"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.1",
-    "@angular/cdk": "^16.2.12",
+    "@angular/cdk": "^17.0.1",
     "@angular/common": "^17.0.1",
     "@angular/compiler": "^17.0.1",
     "@angular/core": "^17.0.1",
     "@angular/forms": "^17.0.1",
-    "@angular/material": "^16.2.12",
+    "@angular/material": "^17.0.1",
     "@angular/platform-browser": "^17.0.1",
     "@angular/platform-browser-dynamic": "^17.0.1",
     "@angular/platform-server": "^17.0.1",
     "@angular/router": "^17.0.1",
+    "@angular/ssr": "^17.0.0",
     "@scullyio/ng-lib": "^2.1.41",
     "@scullyio/scully": "^2.1.41",
+    "express": "^4.18.2",
     "github-calendar": "^2.2.9",
     "hammerjs": "^2.0.8",
-    "marked": "^4.2.12",
-    "ngx-markdown": "^13.1.0",
+    "marked": "^9.1.6",
+    "ngx-markdown": "^17.1.1",
     "openai": "^3.2.1",
     "prismjs": "^1.29.0",
     "rxjs": "~6.6.0",
@@ -42,6 +48,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.1",
     "@scullyio/scully-plugin-puppeteer": "^2.1.41",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
