--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,10 +5,7 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
+  "files": ["src/main.ts", "src/polyfills.ts", "src/main.server.ts", "server.ts"],
   "include": [
     "src/**/*.d.ts"
   ]
