--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "1mbb",
+                  "maximumWarning": "1mb",
                   "maximumError": "2mb"
                 },
                 {
