--- a/package.json
+++ b/package.json
@@ -9,26 +9,22 @@
     "test": "ng test",
     "scully": "npx scully --",
     "scully:serve": "npx scully serve --",
-    "static": "ng build --configuration production && npx scully --",
-    "dev:ssr": "ng run personal:serve-ssr",
-    "serve:ssr": "node dist/personal/server/main.js",
-    "build:ssr": "ng build && ng run personal:server",
-    "prerender": "ng run personal:prerender"
+    "static": "ng build --configuration production && npx scully --"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.1",
+    "@angular/animations": "^18.0.5",
     "@angular/cdk": "^17.0.1",
-    "@angular/common": "^17.0.1",
-    "@angular/compiler": "^17.0.1",
-    "@angular/core": "^17.0.1",
-    "@angular/forms": "^17.0.1",
+    "@angular/common": "^18.0.5",
+    "@angular/compiler": "^18.0.5",
+    "@angular/core": "^18.0.5",
+    "@angular/forms": "^18.0.5",
     "@angular/material": "^17.0.1",
-    "@angular/platform-browser": "^17.0.1",
-    "@angular/platform-browser-dynamic": "^17.0.1",
-    "@angular/platform-server": "^17.0.1",
-    "@angular/router": "^17.0.1",
-    "@angular/ssr": "^17.0.0",
+    "@angular/platform-browser": "^18.0.5",
+    "@angular/platform-browser-dynamic": "^18.0.5",
+    "@angular/platform-server": "^18.0.5",
+    "@angular/router": "^18.0.5",
+    "@angular/ssr": "^18.0.6",
     "@scullyio/ng-lib": "^2.1.41",
     "@scullyio/scully": "^2.1.41",
     "express": "^4.18.2",
@@ -43,9 +39,9 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.1",
+    "@angular-devkit/build-angular": "^18.0.6",
+    "@angular/cli": "^18.0.6",
+    "@angular/compiler-cli": "^18.0.5",
     "@scullyio/scully-plugin-puppeteer": "^2.1.41",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~3.8.0",
@@ -56,6 +52,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.4.5"
   }
 }
